Window size messed up after returning from fullscreen
Watch a fullscreen video in Epiphany or Firefox, then return from fullscreen. The application window is resized as if it were maximized, instead of returning to its proper original size. @BrainBlasted and @exalm both report seeing this behavior in GTK 4 apps too. And @exalm has reported seeing it in Evince. That's enough different applications that it seems reasonable to suspect a regression in mutter 41, though I'm not completely certain (it's hardly impossible for both GTK 3 and GTK 4 to have regressed around the same time). I have mutter-41.0-3.fc35.